# gw2-dps-report

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  parser.sh  settings.conf
.github/: main.workflow
.github/workflows/: build.yml  docker.yml  main.yml
res/: 404.html  app.css  app.js  index.html
server/: .gitignore  Cargo.toml
server/res/: app.css  index.html
server/src/: main.rs
src/: main.rs
