[package]
name = "gw2-dps-report"
version = "0.8.91"
authors = ["Yang Sheng Han <progamesigner@gmail.com>"]
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["http1", "http2", "server", "tcp"]}
mktemp = "0.4"
tokio = { version = "1.20", features = ["net", "rt", "rt-multi-thread"] }
